deployments/service/base/appsrv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsrv
spec:
  ports:
    - protocol: TCP
      port: 8000
