deployments/service/base/appsrv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appsrv
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appsrv
                port:
                  number: 8000
